<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/loginheader"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <!-- Logo Start-->
            <ImageView android:src="@mipmap/logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="10dip"/>
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="#24b2eb"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">
            <!--  Username Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#0b84aa"
                android:text="@string/username"
                android:textSize="22dip"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="@dimen/EditTextHt"
                android:id="@+id/edituser"

                android:background="@drawable/edittextdesign"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:ems="15"
                />
            <!--  Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#0b84aa"
                android:textSize="22dip"
                android:text="@string/password"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="@dimen/EditTextHt"
                android:id="@+id/edit_pwd"

                android:background="@drawable/edittextdesign"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:ems="15"
                />

            <!-- Login button -->

            <Button
                android:text="@string/loginbtn"
                android:id="@+id/btnLogin"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A80000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_above="@+id/viewTrip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal" />

            <com.facebook.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <!-- Link to Registration Screen -->
            <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/newtoyoutoo"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#0b84aa"/>

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>
